# praxa-core

./: .gitignore  README.md  pyproject.toml
praxa_core/: __init__.py  _utils.py  actions.py  agent_runtime.py  context.py  email_filter.py  memory.py  triage.py
praxa_core/tools/: __init__.py  buckets.py  calendar.py  email.py  integrations.py  tasks.py
